re PR target/53272 (wrong condition-codes for strict-low-part destination and small-integer source)

PR target/53272
	* config/cris/cris.c (cris_normal_notice_update_cc): For TARGET_V32,
	when a constant source operand matches an "I" constraint, the "no
	CC0 change" applies to a register-destination only, not a
	strict_low_part-destination.

From-SVN: r187285